tests/basic/check/lam/060.pan
f60 : int -> {w:int|false}
f60 = \x:int. 1

f61 : {v:int|true} -> {w:int|false}
f61 = \x:int. 1

f62 : {v:int|v=1} -> {w:int|false}
f62 = \x:int. 1

f63 : {v:int|v=2} -> {w:int|false}
f63 = \x:int. 1

